@@ -1,0 +1,8 @@
+#
+# Don't modified this file.
+# This file is auto generation. 
+#
+module DeepConnect
+    VERSION = "0.4.03-002"
+end
+
